# epanet-solver

./: .gitignore  CMakeLists.txt  README.md
src/outfile/: CMakeLists.txt  epanet_output.c
src/outfile/include/: epanet_output.h  epanet_output_enums.h
src/run/: CMakeLists.txt
src/solver/: CMakeLists.txt  epanet.c  epanet2.c  funcs.h  input3.c  project.c  types.h
src/solver/include/: epanet2_2.h  epanet2_enums.h
tests/: CMakeLists.txt  test_net_builder.cpp  test_reent.cpp
tests/outfile/: CMakeLists.txt  test_output.cpp
tests/shared/: test_filemanager.cpp
tests/solver/: CMakeLists.txt  test_analysis.cpp  test_control.cpp  test_curve.cpp  test_demand.cpp  test_hydraulics.cpp  test_link.cpp  test_node.cpp  test_pattern.cpp  test_project.cpp  test_quality.cpp  test_report.cpp  test_solver.cpp  test_solver.hpp  test_toolkit.hpp
